--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         Gun Bat!
                     </h1>
                     <p>
-                    <input id="practise" type="button" value="Practise Mode"/>
+                    <input id="practise" type="button" value="Practice Mode"/>
                     <br/>
                     <input id="play" type="button" value="Play!"/>
                     <br/>
