--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     </div>
                     <input class="button" id="test-audio" type="button" value="Test Audio"/>
                     </p>
+		    <div class="centered">For best results, headphones are recommended</div>
                 </div>
             </xsl:template>
 
@@ -65,6 +66,7 @@
 <body>
     <div id="content">
         <h1>Gun Bat</h1>
+        <h2>Loading...</h2>
     </div>
 </body>
 </html>
