--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
                     <h1>
                         Gun Bat!
                     </h1>
-                    <p>
                     <input class="button" id="practise" type="button" value="Practice Mode"/>
+                    <div class="centered">Audio + GFX</div>
                     <input class="button" id="play" type="button" value="Play!"/>
+                    <div class="centered">Audio only: Headphones required</div>
                     <div class="button">
                     <label><input class="checkbox" id="disable-compass" type="checkbox" checked="checked"/>Disable Compass</label>
                     </div>
                     <input class="button" id="test-audio" type="button" value="Test Audio"/>
-                    </p>
-		    <div class="centered">For best results, headphones are recommended</div>
+                    <br/>
+                    <div class="centered">Tested on Desktop Chrome, Mobile Safari, and Android KitKat</div>
+
                 </div>
             </xsl:template>
 
